# fijian100wl-cldf

./: .pre-commit-config.yaml  LICENSE  README.md  cldfbench_fijian100wl.py  convert.py  metadata.json  pyproject.toml
