[tool.poetry]
name = "fijian100wl-cldf"
version = "0.1.0"
description = ""
authors = ["MURAWAKI Yugo <murawaki@i.kyoto-u.ac.jp>"]
readme = "README.md"
packages = [{include = "fijian100wl_cldf"}]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
pycldf = "^1.38.1"
pandas = ">=2.1.1"
pre-commit = ">=3.5.0"
openpyxl = "^3.1.5"
pyproj = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
