[project]
name = "fijian100wl-cldf"
version = "0.1.0"
description = "Convert the Fijian Language 100 Word List snapshot to CLDF."
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "pycldf>=1.38.1,<2",
    "pandas>=2.1.1",
    "openpyxl>=3.1.5,<4",
    "pyproj>=3.6.1,<4",
    "cldfbench>=1.14.3",
    "pyglottolog>=3.16.0",
    "pyconcepticon>=3.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
]

[tool.uv]
package = false
